This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

01-Jul-2008 (Gnomi)
  - (ed.c) The 'r' command leaked the filename (Bug #488).

31-Jun-2008 (Zesstra)
  - (configure.in) Fix configure.in to work with autoconf 2.61 and later.
      (patch from Fuchur, fixes bugs #541, #542)

30-Jun-2008 (Zesstra)
  - (efuns.c) Added actual array size to error message 'Illegal array size'
     in f_regexplode().
  - (hosts/GnuWin32/GnuWin32.h, hosts/GnuWin32/socket.h) 
      Fixed #defines HOST_DEPENDENT_INIT and socket_number. 
      (Bug #497, thanks to Zonk_FF)

05-Jan-2008 (Gnomi)
  - (efuns.c) The target index in the final copy loop must be incremented
       only for actually copied elements.

27-Dec-2007 (Lars Duening)
  - (i-eval_cost.h, efuns.c, lots of files) Replaced the eval-cost
       increment macro with an inline function which does more checks
       to prevent an overflow. Also, to allow proper catch() handling,
       the eval_cost is capped at max_eval_cost+1 (suggested by Gnomi).
  - (efuns.c) Having md5()/sha1() cost 10 ticks per iteration makes too
       long evaluations more unlikely (suggested by Gnomi).

11-Nov-2007 (Lars Duening)
  - (mstrings.c) mstr_rn_str() now allows a starting position at the
       end of the input string (Bug #509).
  - (efuns.c) sha1() and md5() now cost 5 ticks per iteration (Bug #485).
  - (interpret.h, efuns.c, regexp.c) Introduced a macro to increment
       both eval_cost and total_evalcost with a single statement.

11-Nov-2007 (Gnomi)
  - (actions.c) Improvements for the removal of actions added by shadows
       (Bug #514).
  - (prolang.y) After two consecutive inline closures within the same
       function, the line number information was incorrect (Bug #510).
  - (lex.c) Corrected an off-by-one error related to auto-includes
       by moving the line number adjustment from the CHAR_EOF handling